website/versioned_docs/version-0.6.0/cli-reference/gitops_completion_fish.md
## gitops completion fish

generate the autocompletion script for fish

### Synopsis


Generate the autocompletion script for the fish shell.

To load completions in your current shell session:
$ gitops completion fish | source

To load completions for every new session, execute once:
$ gitops completion fish > ~/.config/fish/completions/gitops.fish

You will need to start a new shell for this setup to take effect.


```
gitops completion fish [flags]
```

### Options

```
  -h, --help              help for fish
      --no-descriptions   disable completion descriptions
```

### Options inherited from parent commands

```
  -e, --endpoint string    The Weave GitOps Enterprise HTTP API endpoint
      --namespace string   The namespace scope for this operation (default "wego-system")
  -v, --verbose            Enable verbose output
```

### SEE ALSO

* [gitops completion](gitops_completion.md)	 - generate the autocompletion script for the specified shell

###### Auto generated by spf13/cobra on 16-Dec-2021
